# kres

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: kres.h
kres/: main.cpp  main.h  types.h  utility.h
kres/hash/: crc32.c  crc32.h
tests/: read_write_archive.cpp
